--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@
     list-style: none;
     text-decoration: none;
 }
-
+/* shared style */
+.my{
+    margin-bottom:15px;
+}
 .color-text{
 background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
 background-clip: text;
@@ -51,6 +54,14 @@ font-weight: 700;
 
 header{
     width:100%;
+   
+}
+.nav-container{
+    width:100%;
+    height:100px;
+   padding-top: 20px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
 }
 
 nav{
@@ -58,7 +69,8 @@ nav{
     display:flex;
     justify-content: space-between;
     align-items: center;
-    margin:50px auto;
+    margin:0px auto 40px auto;
+    
 }
 .logo{
     display: flex;
@@ -106,9 +118,16 @@ nav ul li a{
     margin-top: 3px;
 }
 /* banner section */
+.banner-div{
+    width:100%;
+    background-image: url("images/Group\ 14.png");
+    background-repeat: no-repeat;
+    background-position: left center;
+    margin-top:-27px;
+}
 .banner-container{
     width:80%;
-    margin:30px auto;
+    margin:30px auto 0px auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -172,8 +191,48 @@ height: auto;
 height:auto;
 margin-left:13px;
 }
+/* gamer section */
+main{
+    width:100%;
+    margin-top:-31px;
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+}
+.gamer-section{
+    width:80%;
+    margin:30px auto;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    gap:20px;
+    
+}
+.gamer-img{
+    width:100%;
 
+}
+.gamer-img img{
+    width:100%;
+}
+.gamer-content{
+    width:60%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+}
 
+.gamer-para{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top:24px;
+}
+.gamer-para h3{
+    color: #534C64;
+font-size: 32px;
+font-weight: 700;
+line-height: 45px;
+}
 
 
 
@@ -186,13 +245,20 @@ margin-left:13px;
 /* responsive part */
 
 @media screen and (max-width :576px) {
+    .nav-container{
+        width:100%;
+        height:auto;
+       padding-top: 40px;
+        background:none;
+        box-shadow: none;
+    }
     nav{
         width:100%;
         flex-direction: column;
         gap:50px;
     }
 
-    .menu, nav ul{
+    .menu, nav ul, .gamer-section{
         width:100%;
         flex-direction: column;
         gap:36px;
@@ -200,19 +266,26 @@ margin-left:13px;
     .nav-btn{
         margin-top: 35px;
     }
+    .banner-div{
+       background: none;
+    }
     .banner-container{
-        width:100%;
+        width:90%;
         flex-direction: column-reverse;
         justify-content: center;
+        margin-left:20px;
     }
-    .banner-title{
+    .banner-title {
+        background-image: url("images/Group\ 14.png");
+        background-size: 100%;
+        height:500px;
         width:100%;
         align-items: center;
     }
     .banner-heading{
         margin-bottom: 10px;
-        font-size:2.5rem;
-        margin-top:50px;
+        font-size:2.1rem;
+        margin-top:6px;
     }
     .banner-title h1{
         font-size: 60px;
@@ -226,4 +299,31 @@ margin-left:13px;
         padding: 15px 30px;
         font-size: 15px;
     }
+    main{
+        background: white;
+        margin-top: 15px;
+    }
+    .gamer-content{
+        width:100%;
+        align-items: center;
+    }
+.gamer-content p{
+    width:80%;
+    text-align: center;
+}
+.gamer-para span{
+    width:100%;
+    text-align: center;
+}
+
+.gamer-para h3{
+    text-align: center;
+    width:100%;
+    font-size: 25px;
+}
+
+
+
+
+
 }
