--- a/style.css
+++ b/style.css
@@ -303,11 +303,12 @@ align-items: flex-start;
 /* feature section */
 
 .feature-section{
-    width:70%;
+    width:80%;
     margin:40px auto ;
     display:flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 .feature-title{
     width:35%;
@@ -319,6 +320,7 @@ align-items: flex-start;
 }
 .feature-img{
     width:50%;
+    height:850px;
 }
 .feature-img img{
     width:635px;
@@ -333,7 +335,28 @@ align-items: flex-start;
     top: -275px;
     left: -112px;
 }
-
+/* .feature-img2{
+    width:80%;
+}
+.feature-img2 img{
+    width:710px;
+    height:650px;
+    border-radius: 8px;
+    margin-right: 30px;
+    margin-left:0px;
+}
+.top-img2 img{
+    width:318px;
+    height:365px;
+    border-radius: 8px;
+    position:relative;
+    top: -274px;
+    right: -460px;
+}
+.feature-title2{
+    width:60%;
+    margin-left:65px;
+} */
 /* responsive part */
 
 @media screen and (max-width :576px) {
