--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ header{
 }
 
 nav{
-    width:80%;
+    max-width:1450px;
     display:flex;
     justify-content: space-between;
     align-items: center;
@@ -126,7 +126,7 @@ nav ul li a{
     margin-top:-27px;
 }
 .banner-container{
-    width:80%;
+    max-width:1450px;
     margin:30px auto 0px auto;
     display: flex;
     justify-content: space-between;
@@ -198,7 +198,7 @@ main{
     background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
 }
 .gamer-section{
-    width:80%;
+    max-width:1450px;
     height:600px;
     margin:30px auto;
     display:flex;
@@ -242,7 +242,7 @@ line-height: 45px;
     margin-top:120px;
 }
 .video-container{
-    width:80%;
+    max-width:1450px;
     margin:120px auto;
     
 }
@@ -303,7 +303,7 @@ align-items: flex-start;
 /* feature section */
 
 .feature-section{
-    width:80%;
+    max-width:1450px;
     margin:40px auto ;
     display:flex;
     justify-content: space-between;
@@ -335,29 +335,38 @@ align-items: flex-start;
     top: -275px;
     left: -112px;
 }
-/* .feature-img2{
+.feature-section2{
+    max-width:1450px;
+    margin:40px auto ;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.feature-img2{
     width:80%;
 }
 .feature-img2 img{
-    width:710px;
-    height:650px;
+    width:650px;
+    height:630px;
     border-radius: 8px;
     margin-right: 30px;
     margin-left:0px;
 }
 .top-img2 img{
-    width:318px;
-    height:365px;
+    width:300px;
+    height:345px;
     border-radius: 8px;
     position:relative;
     top: -274px;
     right: -460px;
 }
 .feature-title2{
-    width:60%;
-    margin-left:65px;
-} */
-/* responsive part */
+    width:33%;
+    margin-left:41px;
+     margin-bottom: 230px;
+} 
+
+/* responsive part*/
 
 @media screen and (max-width :576px) {
     .nav-container{
@@ -466,7 +475,7 @@ align-items: flex-start;
     width:80%;
     text-align: center;
 }
-.feature-img{
+.feature-img, .feature-img2{
     width:100%;
 }
 .feature-img img{
@@ -474,11 +483,35 @@ align-items: flex-start;
     height:auto;
     margin-left:22px;
 }
+.feature-img2 img{
+    width:90%;
+    height: auto;
+    margin-left: 40px;
+}
 .top-img img{
     width:250px;
     height:250px;
     top:-170px;
     left:-20px;
 }
-
+.feature-section2{
+    flex-direction: column-reverse;
+}
+.top-img2 img{
+    width:220px;
+    height: 220px;
+    left:200px;
+    top:-115px;
+}
+.feature-title2{
+    margin-bottom:40px;
+    
+}
+.feature-title2, .feature-title2 h1,.feature-title2 p{
+    width:100%;
+    text-align: center;
+}
+.feature-section2{
+    margin-top: -250px;
+}
 }
