--- a/style.css
+++ b/style.css
@@ -89,10 +89,23 @@ nav{
     align-items: center;
     gap:32px;
 }
+nav ul li{
+    transition:all 0.5s;
+}
 nav ul li a{
     color: #3C354F;
     font-size: 1.1rem;
     font-weight: 500;
+    transition:all 0.3s;
+    padding:10px 15px;
+    border-radius: 8px;
+   
+}
+nav ul li a:hover , nav ul li:hover{
+    color:white;
+    background-color: #F948B2;
+    transform: scale(1.1);
+    
 }
 .nav-btn{
     display: flex;
@@ -108,6 +121,8 @@ nav ul li a{
     width:262px;
     height:56px;
 }
+
+
 .fa-youtube-play{
     font-size: 23px !important;
      color:#F61C0D;
@@ -180,7 +195,13 @@ margin-bottom: 24px;
 }
 .btn1{
 background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
-
+transition:all 0.5s;
+}
+.btn1:hover , .btn2:hover{
+    background: rgb(255, 207, 255);
+    color: #53494f;
+    transform: scale(1.1);
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.08);
 }
 .btn2{
 background: #4EC5F7;
@@ -519,6 +540,9 @@ footer{
         margin-bottom: 10px;
         font-size:2.1rem;
         margin-top:6px;
+    }
+    .banner-img{
+        width:80%;
     }
     .banner-img img{
         margin-left: 0px;
@@ -870,6 +894,9 @@ footer{
     height:50px;
     font-size: 12px;
     
+}
+.type2{
+    width:140px;
 }
 .game-type img{
     width:20px;
