--- a/style.css
+++ b/style.css
@@ -393,6 +393,80 @@ align-items: flex-start;
     margin-left:41px;
      margin-bottom: 200px;
 }
+/* career section */
+.career-section{
+    width:100%;
+    height:700px;
+    margin-top: 100px;
+    display: flex;
+    background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
+   
+}
+.career-div{
+    width:1450px;
+    margin:0px auto;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    gap:40px;
+    
+}
+.career-content{
+    width:40%;
+    color:white;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap:20px;
+}
+.career-content h1{
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 60px;
+}
+.career-para{
+    font-size: 18px;
+    font-weight: 400;
+    line-height:30px;
+}
+.career-name{
+    width:100%;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.left-div ul{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.left-div ul li, .right-div ul li{
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 40px;
+}
+.right-div ul{
+    display:flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.career-img{
+    width:60%;
+}
+.career-img img{
+    width:100%;
+    height: 100%;
+    margin-left:85px;
+
+}
+.btn3{
+color:#FF42A5;
+margin-top:20px;
+}
+
  /*game type section  */
 .games-type-container{
     max-width:1450px;
@@ -502,6 +576,7 @@ footer{
 
 
 @media screen and (max-width :576px) {
+
     .nav-container{
         width:100%;
         height:auto;
@@ -520,7 +595,7 @@ footer{
         flex-direction: column;
         margin-bottom: 120px; 
     }
-    .nav-btn{
+    .nav-btn, .career-section{
         margin-top: 35px;
     }
     .banner-div{
@@ -545,10 +620,10 @@ footer{
         font-size:2.1rem;
         margin-top:6px;
     }
-    .banner-img{
+    .banner-img, .career-img{
         width:80%;
     }
-    .banner-img img{
+    .banner-img img, .career-img img{
         margin-left: 0px;
         margin-right: 0px;
         width:100%;
@@ -585,7 +660,7 @@ footer{
     text-align: center;
 }
     
-.gamer-content, .card, .feature-title, .video-container{
+.gamer-content, .card, .feature-title, .video-container, .career-content{
         width:100%;
         align-items: center;
 }
@@ -594,7 +669,7 @@ footer{
     text-align: center;
 }
 
-.gamer-para h3  {
+.gamer-para h3 ,.career-content h1 {
     text-align: center;
     width:100%;
     font-size: 25px;
@@ -659,6 +734,26 @@ footer{
     width:90%;
     text-align: center;
 }
+.career-section{
+    width:100%;
+    height:auto;
+}
+    .career-div{
+        flex-direction: column;
+        width:100%;
+    }
+    .career-name{
+        justify-content: center;
+    }
+    .left-div ul li, .right-div ul li{
+font-size: 12px;
+text-align: center;
+    }
+    .career-para{
+        width:80%;
+        text-align: center;
+        font-size: 12px;
+    }
 .games-type-container{
     width:100%;
     height:auto;
@@ -722,6 +817,30 @@ footer{
 }
 
 @media screen and (max-width:960px) and (min-width:576px) {
+    .career-section{
+        width:100%;
+        height:auto;
+    }
+        .career-div{
+            flex-direction: column;
+            width:100%;
+        }
+        .career-name{
+            justify-content: center;
+            gap:100px;
+        }
+        .left-div ul li, .right-div ul li{
+    font-size: 14px;
+    text-align: center;
+        }
+        .career-para{
+            width:80%;
+            text-align: center;
+            font-size: 14px;
+        }
+        .career-content h1{
+            margin-top:15px;
+        }
     .nav-container{
         width:100%;
         height:auto;
@@ -774,8 +893,7 @@ footer{
         background: white;
         margin-top: 15px;
     }
-
-        .gamer-section{
+.gamer-section{
             width:100%;
             height:600px;
             margin:0px auto;
@@ -790,7 +908,7 @@ footer{
     height:auto;
 }
     
-.gamer-content, .card, .feature-title{
+.gamer-content, .card, .feature-title, .career-content{
         width:100%;
         align-items: center;
     }
@@ -801,7 +919,7 @@ footer{
 .gamer-para{
     width: 100%;
 }
-.gamer-para span {
+.gamer-para span{
     width:100%;
     text-align: center;
 }
