--- a/style.css
+++ b/style.css
@@ -472,7 +472,7 @@ margin-top:20px;
     max-width:1450px;
     height:427px;
     display:flex;
-    margin:40px auto;
+    margin:50px auto;
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
@@ -754,10 +754,13 @@ text-align: center;
         text-align: center;
         font-size: 12px;
     }
+    .career-img img{
+        margin-left: 33px;
+    }
 .games-type-container{
     width:100%;
     height:auto;
-    margin-bottom:30px;
+    margin-bottom:50px;
     gap:3px;
     
     
@@ -1007,7 +1010,7 @@ text-align: center;
 .games-type-container{
     width:78%;
     height:auto;
-    margin-bottom:30px;
+    margin-bottom:50px;
     
     
 }
